# rf-signal-intelligence-lab

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
artifacts/: iq_shift_detector_v1.json
configs/: analyze_baseline_v1.yaml  analyze_groupnorm_head_refit_v1.yaml  analyze_groupnorm_weighted_1p25_v1.yaml  analyze_groupnorm_weighted_v1.yaml  analyze_iq_feature_shift_detection_v1.yaml  analyze_linear_iq_shift_detection_v1.yaml  analyze_output_channel_shift_v1.yaml  analyze_simclr_linear_probe_v1.yaml  analyze_ssl_calibration_v1.yaml  analyze_ssl_label_efficiency_v2.yaml  backfill_ssl_calibration_predictions_v1.yaml  baseline_groupnorm_channel_aware_seed_sweep_v1.yaml  baseline_groupnorm_frozen_backbone_equalizer_seed_sweep_v1.yaml  baseline_groupnorm_multipath_mixed_seed_sweep_v1.yaml  baseline_groupnorm_residual_equalizer_seed_sweep_v1.yaml  baseline_groupnorm_seed_sweep_v1.yaml  baseline_rms_seed_sweep_v1.yaml  baseline_seed_sweep_v1.yaml  compare_batchnorm_groupnorm_class_snr_v1.yaml  compare_channel_confusions_v1.yaml  compare_channel_robustness_v1.yaml  compare_channel_shift_detectors_v1.yaml  compare_frozen_backbone_equalizer_v1.yaml  compare_multipath_mitigation_v1.yaml  compare_radioml2016_external_transfer_v1.yaml  compare_residual_equalizer_v1.yaml  dataset_baseline_128_v1.yaml  dataset_baseline_v1.yaml  dataset_multipath_mild_128_v1.yaml  dataset_multipath_mild_v1.yaml  dataset_multipath_mixed_train_v1.yaml  dataset_multipath_moderate_128_v1.yaml  dataset_multipath_moderate_v1.yaml  dataset_multipath_severe_128_v1.yaml  (+112 more)
(+226 files in other folders)
