@"
[project]
name = "rf-signal-intelligence-lab"
version = "0.1.0"
description = "Local RF modulation recognition lab using synthetic IQ data, PyTorch, and self-supervised learning."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
  { name = "Adnan Tawkul" }
]
keywords = [
  "rf",
  "iq-signals",
  "modulation-recognition",
  "signal-processing",
  "pytorch",
  "self-supervised-learning"
]

[project.urls]
Repository = "https://github.com/AdnanTawkul/rf-signal-intelligence-lab"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []
"@ | Set-Content -Encoding UTF8 pyproject.toml
